# Ather-OS

./: .gitignore  AGENT.md  AtherOS_Project_Master_Document.md  AtherOS_Project_Master_Document.txt  JOURNEY.md  README.md
.obsidian/: graph.json  workspace.json
backend/: README.md  pyproject.toml
backend/samples/: invalid_cycle_workflow.json  invalid_unknown_dependency_workflow.json  valid_research_workflow.json
backend/src/ather_os/: __init__.py
backend/src/ather_os/api/: __init__.py  app.py
backend/src/ather_os/cache/: __init__.py  store.py
backend/src/ather_os/checkpoint/: __init__.py  models.py  query.py  replay.py
backend/src/ather_os/config/: __init__.py
backend/src/ather_os/dag/: __init__.py  models.py  validate_workflow.py  validators.py
backend/src/ather_os/providers/: __init__.py  cached.py  mock.py  provider.py  router.py
backend/src/ather_os/queue/: __init__.py  broker.py  lifecycle.py  memory.py
backend/src/ather_os/state/: __init__.py  events.py  sqlite.py  store.py
backend/src/ather_os/worker/: __init__.py  loop.py  recovery.py
backend/tests/: test_api.py  test_checkpoint_replay.py  test_dag_models.py  test_dag_validators.py  test_in_memory_queue.py  test_provider_router.py  test_response_cache.py  test_sqlite_state_store.py  test_state_events.py  test_validate_workflow_command.py  test_workflow_queue_service.py  test_workflow_recovery.py  test_workflow_worker.py
docs/: 00_Project_Overview.md  01_Architecture.md  02_Folder_Structure.md  03_Database.md  04_APIs.md  05_Components.md  06_State_Management.md  07_Authentication.md  (+14 more)
(+6 files in other folders)
